# cv_bundle

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml
cv_april_detector/scripts/: detector.py
cv_hazmat_detector/scripts/: detector.py
cv_image_detector/: CMakeLists.txt  README.md  package.xml
cv_image_detector/scripts/: detector.py
cv_landolt_detector/: package.xml
cv_landolt_detector/src/: detector.cpp
cv_msg/: CMakeLists.txt  README.md  package.xml
cv_msg/msg/: April_Detection.msg  BBox.msg  Landolt_Detection.msg  QR_Detection.msg  Rotation_Detection.msg
cv_msg_logger/: CMakeLists.txt  README.md  package.xml
cv_msg_logger/logs/: RoboCup2026-CJT-Robotics-Prelims-22:42:37-pois.csv
cv_msg_logger/scripts/: logger.py
cv_qr_detector/: README.md
cv_qr_detector/src/: detector.cpp
cv_rotation_detector/: CMakeLists.txt  README.md  package.xml
cv_rotation_detector/src/: detector.cpp
cv_visualizer/scripts/: visualizer.py
launch/: maze.launch  observe.launch  test.launch  victim.launch
msg/: CV_msg.msg
src/: detector.cpp
src/cv_april_detector/: CMakeLists.txt  package.xml
src/cv_april_detector/scripts/: detector.py
src/cv_visualizer/: CMakeLists.txt  README.md  package.xml
src/cv_visualizer/scripts/: visualizer.py
