<?xml version="1.0"?>
<package format="2">
    <name>cv_bundle</name>
    <version>0.1.0</version>
    <description>Computer Vision Bundle</description>
    <maintainer email="markus.peltsarszky@gmail.com">Markus Peltsarszky</maintainer>
    <author email="markus.peltsarszky@gmail.com">Markus Peltsarszky</author>
    <license>BSD 3-Clause License</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>cv_rotation_detector</exec_depend>
    <exec_depend>cv_qr_detector</exec_depend>
    <exec_depend>cv_hazmat_detector</exec_depend>
    <exec_depend>cv_landolt_detector</exec_depend>
    <exec_depend>cv_april_detector</exec_depend>
    <exec_depend>cv_msg_logger</exec_depend>
    <exec_depend>cv_image_detector</exec_depend>

    <export>
        <metapackage/>
    </export>
</package>