<?xml version="1.0"?>
<package format="2">
  <name>cv_qr_detector</name>
  <version>0.0.0</version>
  <description>QR Code detection for Computer Vision Bundle</description>
  <maintainer email="markus.peltsarszky@gmail.com">Markus Peltsarszky</maintainer>
  <license>BSD 3-Clause License</license>
  <author email="markus.peltsarszky@gmail.com">Markus Peltsarszky</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_msg</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_msg</exec_depend>

</package>